--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "1.7.3",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
     "@prisma/client": "3.7.0",
     "blitz": "0.44.4",
-    "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
+    "formik": "2.2.9",
+    "framer-motion": "5.5.5",
     "react": "18.0.0-beta-149b420f6-20211119",
-    "zod": "3.11.6",
-    "formik": "2.2.9"
+    "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
+    "zod": "3.11.6"
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
@@ -37,8 +41,8 @@
     "eslint": "7.32.0",
     "husky": "7.0.4",
     "lint-staged": "11.3.0-beta.2",
-    "prettier-plugin-prisma": "3.7.0",
     "prettier": "2.5.1",
+    "prettier-plugin-prisma": "3.7.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
     "prisma": "3.7.0",
