--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "blitz start",
     "studio": "blitz prisma studio",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
-    "test": "jest",
+    "test": "jest --verbose",
     "test:watch": "jest --watch",
     "prepare": "husky install"
   },
