fixed infinite redirect loop of Room and Name pages caused by switching rooms

--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "framer-motion": "5.5.5",
     "react": "18.0.0-beta-149b420f6-20211119",
     "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
-    "zod": "3.11.6"
+    "socket.io": "4.4.0",
+    "socket.io-client": "4.4.0",
+    "zod": "3.11.6",
+    "zustand": "3.6.8"
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
