--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@emotion/styled": "11.6.0",
     "@prisma/client": "3.7.0",
     "blitz": "0.44.4",
+    "express": "4.17.2",
     "formik": "2.2.9",
     "framer-motion": "5.5.5",
     "react": "18.0.0-beta-149b420f6-20211119",
