--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch --passWithNoTests",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "migrate": "blitz prisma migrate deploy"
   },
   "prisma": {
     "schema": "db/schema.prisma"
